manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aksdemo-fcf4"
    labels:
        app: "aksdemo-fcf4"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "aksdemo-fcf4"
